fix comparing Money to 0

--- a/event/app/views/dm_event/admin/registrations/_form.html.erb
+++ b/event/app/views/dm_event/admin/registrations/_form.html.erb
@@ -84,7 +84,7 @@
         </div>
         <div class="col-md-3 col-sm-3">
           <ul class="statistics">
-            <% color = @registration.balance_owed > 0 ? :danger : :success %>
+            <% color = @registration.balance_owed.positive? ? :danger : :success %>
             <li><%= stat_block_small label: 'Balance', number: @registration.balance_owed.format(no_cents_if_whole: true), color_type: color, icon: 'icon-coin', percent: 100 %></li>
           </ul>
           <table class="accounting" style="width: 100%">
