added start_date, end_date, start_time, end_time, date_range as registration email template variables

--- a/event/app/views/dm_event/admin/workshops/edit_system_email.html.erb
+++ b/event/app/views/dm_event/admin/workshops/edit_system_email.html.erb
@@ -43,6 +43,11 @@
               <li>{{event.receipt_code}}</li>
               <li>{{event.price_description}}</li>
               <li>{{event.balance}}</li>
+              <li>{{event.start_date}}</li>
+              <li>{{event.end_date}}</li>
+              <li>{{event.start_time}}</li>
+              <li>{{event.end_time}}</li>
+              <li>{{event.date_range}}</li>
               <li>{{payment_details}}</li>
             </ul>
           </div>
