--- a/core/app/views/dm_core/admin/users/edit.html.erb
+++ b/core/app/views/dm_core/admin/users/edit.html.erb
@@ -170,6 +170,22 @@
                   <% end %>
                 <% end %>
               <% end %>
+
+              <% if defined?(DmEvent) %>
+                <%= subsection title: 'Event Permissions' do %>
+                  <form>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Select a Current Workshop</label>
+                      <select class="form-control">
+                        <% Workshop.upcoming.each do |workshop| %>
+                          <option><%= workshop.title %></option>
+                        <% end %>
+                      </select>
+                    </div>
+                    <button type="submit" class="btn btn-default">Grant Access</button>
+                  </form>              
+                <% end %>
+              <% end %>
             </div>
           </div>
         </div>
